tests/out/error/struct/field_is_immutable.out
tests/out/error/struct/field_is_immutable.in.bt:10:2 error: field `bait.test_pkgs.structs.Foo.pub_f` is immutable
tests/out/error/struct/field_is_immutable.in.bt:11:2 error: field `bait.test_pkgs.structs.Foo.pub_mut_f` is immutable
tests/out/error/struct/field_is_immutable.in.bt:15:2 error: field `Spam.priv_f` is immutable
tests/out/error/struct/field_is_immutable.in.bt:16:2 error: field `Spam.pub_f` is immutable
